fin de cassos de uso
